--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,73 +1,88 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
+@layer base {
+  body {
+    font-family: "Noto Sans", sans-serif;
+  }
+  .font-karla {
+    font-family: "Karla", sans-serif;
+  }
+  .nav-link {
+    @apply py-3 px-8 rounded font-medium no-underline transition-colors duration-300;
+  }
+  .btn {
+    @apply py-3 px-8 rounded no-underline transition-colors duration-300;
+  }
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
- 
+
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
- 
+
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
- 
+
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
- 
+
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
- 
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
- 
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
- 
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
- 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
- 
-    --ring: 0 0% 3.9%;
- 
+
+    --primary: 162 47% 50%; /* Green */
+    --primary-foreground: 162 100% 95%;
+
+    --secondary: 258 71% 60%; /* Violet */
+    --secondary-foreground: 258 100% 95%;
+
+    --accent: 162 47% 50%; /* Green */
+    --accent-foreground: 162 100% 95%;
+
+    --destructive: 348 86% 61%;
+    --destructive-foreground: 348 100% 95%;
+
+    --ring: 210 22% 49%;
+
     --radius: 0.5rem;
   }
- 
+
   .dark {
-    --background: 0 0% 3.9%;
+    --background: 210 30% 8%;
     --foreground: 0 0% 98%;
- 
-    --muted: 0 0% 14.9%;
+
+    --muted: 210 10% 20%;
     --muted-foreground: 0 0% 63.9%;
- 
-    --popover: 0 0% 3.9%;
+
+    --popover: 210 10% 14%;
     --popover-foreground: 0 0% 98%;
- 
-    --card: 0 0% 3.9%;
+
+    --card: 210 10% 14%;
     --card-foreground: 0 0% 98%;
- 
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
- 
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
- 
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
- 
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
- 
-    --destructive: 0 62.8% 30.6%;
+
+    --border: 210 10% 28%;
+    --input: 210 10% 28%;
+
+    --primary: 162 47% 50%; /* Green */
+    --primary-foreground: 162 100% 95%;
+
+    --secondary: 258 71% 60%; /* Violet */
+    --secondary-foreground: 258 100% 95%;
+
+    --accent: 162 47% 50%; /* Green */
+    --accent-foreground: 162 100% 95%;
+
+    --destructive: 348 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
- 
-    --ring: 0 0% 83.1%;
+
+    --ring: 210 22% 83.1%;
   }
 }
- 
+
 @layer base {
   * {
     @apply border-border;
